# mini-plus-agent-kit

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  IMPROVEMENTS.md  WAVESHARE_PROTOCOL.md
examples/: autonomous_mission.py  earth_rover_challenge.py  manual_control.py  waveshare_mission.py
mini_plus_agent_kit/: __init__.py  agent.py  cli.py  client.py  control.py  estimator.py  geo.py  harness_client.py  lerobot_backend.py  mcp_server.py  observability.py  planner.py  rover.py  safety.py  sim.py  telegram.py  tools.py  work.py
mini_plus_agent_kit/instructions/: AGENTS.md  IDENTITY.md  SOUL.md  TOOLS.md
tests/: _bootstrap.py  _runner.py  conftest.py  run_all.py  test_actuators.py  test_agent_loop.py  test_geo.py  test_mcp.py  test_navstack.py  test_observability.py  test_planner.py  test_registry.py  test_safety.py  test_sim.py  test_telegram.py  test_units.py  test_verbs.py  test_work.py
tests/live/: run_live.sh  test_live_dwa.py  test_live_ellipsoid.py  test_live_harness.py  test_live_heading.py  test_live_lerobot.py  test_live_mcp.py  test_live_montecarlo.py  test_live_navigate.py  test_live_navstack.py  test_live_planner.py  test_live_solana.py  test_live_track_color.py  test_live_walrus.py
